add restaurants function

--- a/bot/app/src/main/resources/localisation/strings.properties
+++ b/bot/app/src/main/resources/localisation/strings.properties
@@ -29,3 +29,7 @@ rateMe=%sRate me
 metricSystem=Metric System
 imperialSystem=Imperial System
 selectLanguage=Your current language is *%s*. Select a language from the list to change to that language.
+
+
+order=order
+restaurant=restaurant
