--- a/bot/app/src/main/resources/localisation/strings.properties
+++ b/bot/app/src/main/resources/localisation/strings.properties
@@ -31,4 +31,4 @@ imperialSystem=Imperial System
 selectLanguage=Your current language is *%s*. Select a language from the list to change to that language.
 
 
-restaurant=restaurant
+restaurant=%sRestaurant
